# tpu-verifier-normalforms

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
configs/: hnf_sparse_8x8.yaml  rref_16x16_mod1009.yaml  rref_8x8_mod101.yaml  rref_backward_4x4_mod101.yaml  snf_certificate_small.yaml
configs/v6e1/: README.md  hnf_growth_search.yaml  rref_backward_state_shards.yaml  rref_colab_reduced_long_profile.yaml  rref_colab_reduced_profile.yaml  rref_large_profile.yaml  rref_matrixformer_smoke.yaml  snf_certificate_search.yaml
docs/: benchmark_protocol.md  certificate_format.md  colab_v6e_measured_run.md  colab_v6e_notes.md  design.md  hnf_v08_experiment.md  issue_backlog.md  lean_checker_plan.md  pre_colab_preflight.md  trajectory_shards.md  v0.9_closure.md
docs/architecture/: certinf_v6e_design.md
docs/benchmarks/: v6e1_protocol.md
lean/: Test.lean  VerifierNormalForms.lean  lake-manifest.json  lakefile.toml
lean/Test/: RREF.lean  SNF.lean  Smoke.lean
lean/VerifierNormalForms/: Basic.lean  RREF.lean  SNF.lean
notebooks/: rref_v6e_measured_run.ipynb  rref_v6e_smoke_training.ipynb
results/measured/: rref_32x32_mod1009_colab_v6e1_reduced_500step.json  rref_32x32_mod1009_colab_v6e1_reduced_500step.md  rref_8x8_mod101_apple_m4_large.json  rref_8x8_mod101_apple_m4_large.md  rref_8x8_mod101_colab_v6e1_large.json  rref_8x8_mod101_colab_v6e1_large.md  rref_8x8_mod101_large_comparison.md  rref_smoke.json  rref_smoke.md
scripts/: pre_colab_preflight.py  rref_measured_run.py  rref_v6e_profile.py
src/nf_agent/: __init__.py  cli.py
tests/benchmarks/: test_hnf_benchmark.py  test_rref_benchmark.py  test_snf_benchmark.py
tests/certificates/: test_snf_schema.py
tests/cli/: test_benchmark_hnf_cli.py  test_benchmark_rref_cli.py  test_benchmark_snf_cli.py  test_data_shards_cli.py  test_hnf_v08_cli.py  test_profile_hnf_growth_cli.py  test_profile_v6e_cli.py  test_report_benchmark_cli.py  (+7 more)
(+78 files in other folders)
