[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nf-agent"
version = "0.1.0"
description = "Verifier-guided agents for exact matrix normal forms."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "click",
  "einops",
  "flax",
  "grain",
  "jax",
  "jaxlib",
  "matplotlib",
  "networkx",
  "numpy",
  "optax",
  "orbax-checkpoint",
  "pandas",
  "pydantic",
  "pyyaml",
  "rich",
  "scipy",
  "sympy",
  "tqdm",
]

[project.scripts]
nf-agent = "nf_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
warn_return_any = true
warn_unused_configs = true

