[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nf-agent"
version = "0.1.0"
description = "Verifier-guided agents for exact matrix normal forms."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "click",
  "einops",
  "flax",
  "grain",
  "jax",
  "jaxlib",
  "matplotlib",
  "networkx",
  "numpy",
  "optax",
  "orbax-checkpoint",
  "pandas",
  "psutil",
  "pydantic",
  "pyyaml",
  "rich",
  "scipy",
  "sympy",
  "tqdm",
  "zarr",
]

[project.scripts]
nf-agent = "nf_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]
ignore = ["UP040", "UP047"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
strict = true
warn_return_any = true
warn_unused_configs = true
